<resources>
    <string name="app_name">MoneyManager</string>
    <string name="title_overview">Sinopsis</string>
    <string name="title_statistics">Statistica</string>
    <string name="title_scope">Scopuri</string>
    <string name="title_savings">Economii</string>
    <string name="title_add">Adaugare</string>

    <string name="currency"> MDL</string>
    <string name="income">Venit</string>
    <string name="outgoings">Cheltuieli</string>
    <string name="from">De La:</string>
    <string name="until">Până la</string>
</resources>